[package]
name = "net"
version = "0.1.0"
authors = ["Spxg <itsme@unsafe.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
rawsock = "0.3.0"
mac_address = "1.1.1"

[dependencies.byteorder]
version = "1.0"
default-features = false

[dependencies]
